# caselaw-guard

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  package.yml  publish.yml
examples/: australia_index.sample.json
scripts/: eval_auslaw_benchmark.py
src/caselaw_guard/: __init__.py  api.py  australia_index.py  cli.py  extractors.py  mcp_server.py  models.py  verifier.py
src/caselaw_guard/adapters/: __init__.py  australia.py  base.py  courtlistener.py
tests/: test_auslaw_benchmark_eval.py  test_australia_adapter.py  test_australia_index_builder.py  test_cli_and_api.py  test_courtlistener_adapter.py  test_courtlistener_integration.py  test_extractors.py  test_mcp_server.py  test_verifier_contract.py
tests/fixtures/: australia_index.json
