[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "caselaw-guard"
version = "0.1.0"
description = "Fail-closed case-law citation verification for legal agents and drafting workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "CaseLaw Guard contributors" }
]
keywords = ["legaltech", "citations", "case-law", "ai-safety", "agents"]
dependencies = [
  "eyecite>=2.7",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.6",
  "typer>=0.12",
  "uvicorn>=0.29"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
caselaw-guard = "caselaw_guard.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: live provider integration tests"
]

[tool.hatch.build.targets.wheel]
packages = ["src/caselaw_guard"]
