[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "caselaw-guard"
version = "0.1.2"
description = "Fail-closed case-law citation verification for legal agents and drafting workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "CaseLaw Guard contributors" }
]
keywords = ["legaltech", "citations", "case-law", "ai-safety", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Indexing",
  "Typing :: Typed"
]
dependencies = [
  "eyecite>=2.7",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.6",
  "typer>=0.12",
  "uvicorn>=0.29"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
mcp = [
  "mcp>=1,<2"
]

[project.urls]
Homepage = "https://github.com/l0cka/caselaw-guard"
Repository = "https://github.com/l0cka/caselaw-guard"
Issues = "https://github.com/l0cka/caselaw-guard/issues"
Changelog = "https://github.com/l0cka/caselaw-guard/blob/main/CHANGELOG.md"

[project.scripts]
caselaw-guard = "caselaw_guard.cli:app"
caselaw-guard-mcp = "caselaw_guard.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: live provider integration tests"
]

[tool.hatch.build.targets.wheel]
packages = ["src/caselaw_guard"]
